2012-02-14 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/z80/gen.c:
	  Fix addition when multiple operands are on the stack and --fomit-frame-pointer is used.

2012-02-14 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/z80/peeph-z80.def,
	  src/z80/gen.c,
	  src/z80/ralloc2.cc:
	  Generate better code when using --fomit-frame-ppinter.

2012-02-14 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* support/regression/tests/gcc-torture-execute-pr28651.c:
	  Disable test for older gcc.

2012-02-13 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* support/regression/tests/gcc-torture-execute-pr49073.c,
	  support/regression/tests/gcc-torture-execute-pr36691.c:
	  Disabled some tests for older gcc.
	* support/regression/tests/gcc-torture-execute-*.c:
	  Added some more tests from the execute part of the gcc torture regression test suite.
	* src/z80/gen.c:
	  Improve handling of bc, de in addition.
	* src/SDCC.lex:
	  Remove leftover legacy keyword function.

2012-02-13 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/z80/ralloc2.cc,
	  src/z80/gen.c:
	  Improve handling of hl in address calculations, minor decrement improvement.

2012-02-13 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* support/regression/tests/gcc-torture-execute-pr34070-1.c,
	  support/regression/tests/gcc-torture-execute-pr34070-2.c:
	  Disable more tests for older gcc
	* support/regression/tests/gcc-torture-execute-pr15296.c,
	  support/regression/tests/bug1115321.c: Fix test to be compatible
	  with hosts in which int and pointers differ in size.

2012-02-12 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* support/regression/tests/gcc-torture-execute-pr42833.c:
	  don't redefine ssize_t if host already defines

2012-02-12 Raphael Neider <rneider AT web.de>

	* src/pic14/pcode.c (newpCodeOpBit):
	  prevent SIGSEGV on copying temporary registers
